2010-06-22: CSSlayer <wengxt@gmail.com>
    * 修复一个由于记录模式带来的bug（输入过长时溢出）
    * 修复拼音输入时输入过长溢出的问题
    * 重新调整信息显示代码，采用统一函数修改具体字符串
	* 修复一个查询字体时的导致崩溃的指针问题
	* 增加崩溃时调试信息输出
	* 系统托盘随主题更换

2010-06-21: CSSlayer <wengxt@gmail.com>
    * 再次尝试解决字体问题
    * 由系统判断默认字体
    * 修复引入skin之后的光标位置问题

2010-06-19: CSSlayer <wengxt@gmail.com>
    * 移除Xft
    * 移除一些不再起作用的选项
    * 尝试解决字体问题

2010-06-16: CSSlayer <wengxt@gmail.com>
    * 彻底移除Xpm
	* 添加 -ldl
	* 修复多余的显示信息
	* 默认字体使用Sans
	* 默认主题小修改
	* 添加一个来自ubuntu.org.cn的暗色主题

2010-06-16: t3swing <t3swing@gmail.com>
    * 右键菜单支持自定义码表显示
	* 系统托盘右键定位
	* 标点提示修复
	* 输入条箭头
	* 状态条按钮鼠标悬停效果
	* 虚拟键盘显示修复

2010-06-07: CSSlayer <wengxt@gmail.com>
    * 更加用户友好，不能加载皮肤时加载默认皮肤

2010-06-05: CSSlayer <wengxt@gmail.com>
    * 系统托盘自适应大小

2010-06-05: t3swing <t3swing@gmail.com>
    * 增加皮肤支持
	* 界面全面修改为cairo绘制

2010-04-26: CSSlayer <wengxt@gmail.com>
	* 修复QuickPhrase的一些崩溃问题，加入翻页支持
	* 不建议在QuickPhrase中使用翻页键作为快捷键
	* 加入一个变长数组的文件
	* 移除码表和xpm源文件不予安装，如有需求请到googlecode下载

2010-04-24: CSSlayer <wengxt@gmail.com>
	* utf8版本去除GBK字符集选项，kimpanel添加显示虚拟键盘状态的按钮
	* 这个按钮提示信息中有快捷键，不能直接按

2010-04-24: CSSlayer <wengxt@gmail.com>
	* src/ImeRemote.c: 修正fcitx远程调用socket文件名问题
	* tools/client-test.c: fcitx-remote添加帮助信息
	* src/ime.c: 修复Issue 190

2010-04-22: CSSlayer <wengxt@gmail.com>
	* 修复overflow，常用字表，无法以词定第二个字，以及一个不保存用户词组的问题

2010-04-22: CSSlayer <wengxt@gmail.com>
	* 调整代码结构, 修改图标文件路径

2010-04-21: CSSlayer <wengxt@gmail.com>
	* createPYMB加入对gbkpy.org的简单错误检测

2010-04-05: CSSlayer <wengxt@gmail.com>
	* 修复自定义双拼配置无效问题

2010-03-24: CSSlayer <wengxt@gmail.com>
	* 感谢提供新托盘图标的zdon (at) forum.ubuntu.org.cn

2010-03-20: CSSlayer <wengxt@gmail.com>
	* 初始化UTF8版本

2010-03-05: Yuking <yuking_net@sohu.com>
	* src/KeyList.c: 修正某些组合键响应不正常的问题

2010-02-12: Yuking <yuking_net@sohu.com>
	* src/ui.c: 修正系统托盘图标显示不正常的问题

2010-02-11: Yuking <yuking_net@sohu.com>
	* src/MainWindow.c, InputWindow.c: 为输入窗和状态窗增加了名字

2010-01-28: Yuking <yuking_net@sohu.com>
	* 修正打开/关闭DBus模式的一些错误

2010-01-18: Yuking <yuking_net@sohu.com>