@@ -59,9 +59,12 @@ Bool            IsInBox (int x0, int y0, int x1, int y1, int x2, int y2);
 
 /*void		SetLocale (void);*/
 
-void OutputString (cairo_t* c, char *str, int fontSize, int x, int y, cairo_color_t* color);
-int             StringWidth (char *str, int fontSize);
-int             FontHeight ();
+void OutputString (cairo_t* c, char *str, char *font, int fontSize, int x, int y, cairo_color_t* color);
+void OutputStringWithContext (cairo_t *c, char *str, int x, int y);
+int  StringWidth (char *str, char *font, int fontSize);
+int             StringWidthWithContext (cairo_t *c, char *str);
+int             FontHeight (char *font);
+int             FontHeightWithContext (cairo_t *c);
 
 Bool            MouseClick (int *x, int *y, Window window);
 Bool		IsWindowVisible(Window window);
